Display profile picture correctly on Safari

--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ nav {
 #profile-picture img {
     object-fit: contain;
     object-position: center;
+    width: 44px;
 }
 
 /* Footer */
